[241027] design: - 검색창 구현

--- a/02-main_camp/Day37/src/app/boards/styles.module.css
+++ b/02-main_camp/Day37/src/app/boards/styles.module.css
@@ -1,4 +1,10 @@
-.pageContainer {
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.boardListContainer {
   max-width: 80rem;
 
   display: flex;
