--- a/02-main_camp/Day37/src/app/_components/boards/Boards-list/list/components/styles.module.css
+++ b/02-main_camp/Day37/src/app/_components/boards/Boards-list/list/components/styles.module.css
@@ -1,77 +1,75 @@
 .boardHeader_header {
-    display: flex;
-    gap: .5rem;
-
-    padding: .75rem 1.5rem .75rem 1.5rem;
-
-    font-weight: 500;
-    font-size: 1rem;
-    color: #1C1C1C;
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.75rem 1.5rem 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1rem;
+  color: #1c1c1c;
 }
 
 .boardHeader_number {
-    width: 4rem;
+  width: 4rem;
 }
 
 .boardHeader_title {
-    width: 53rem;
+  width: 53rem;
 }
 
 .boardHeader_writer {
-    width: 6.25rem;
+  width: 6.25rem;
 }
 
 .boardHeader_date {
-    width: 6.25rem;
+  width: 6.25rem;
 }
 
 .board {
-    position: relative;
-    display: flex;
-    gap: .5rem;
+  position: relative;
+  display: flex;
+  gap: 0.5rem;
 
-    border-radius: .5rem;
-    border: .0625rem solid #F2F2F2;
+  border-radius: 0.5rem;
+  border: 0.0625rem solid #f2f2f2;
 
-    padding: .75rem 1.5rem .75rem 1.5rem;
+  padding: 0.75rem 1.5rem 0.75rem 1.5rem;
 }
 
 .board:hover .board_deleteButton {
-    display: block;
+  display: block;
 }
 
 .board_number {
-    width: 4rem;
-    height: 1.25rem;
-    font-weight: 300;
-    font-size: .875rem;
-    color: #919191;
+  width: 4rem;
+  height: 1.25rem;
+  font-weight: 300;
+  font-size: 0.875rem;
+  color: #919191;
 }
 
 .board_title {
-    width: 53rem;
-    font-weight: 500;
-    font-size: .875rem;
-    color: #1C1C1C;
+  width: 53rem;
+  font-weight: 500;
+  font-size: 0.875rem;
+  color: #1c1c1c;
 }
 
 .board_writer {
-    width: 6.25rem;
-    font-weight: 300;
-    font-size: .875rem;
-    color: #333333;
+  width: 6.25rem;
+  font-weight: 300;
+  font-size: 0.875rem;
+  color: #333333;
 }
 
 .board_date {
-    width: 6.25rem;
-    font-weight: 300;
-    font-size: .875rem;
-    color: #919191;
+  width: 6.25rem;
+  font-weight: 300;
+  font-size: 0.875rem;
+  color: #919191;
 }
 
 .board_deleteButton {
-    display: none;
-    position: absolute;
-    top: 10px;
-    right: 8px;
+  display: none;
+  position: absolute;
+  top: 10px;
+  right: 8px;
 }
