--- a/03-trip/03-03-Next/src/components/Organisms/BoardsDetail/styles.module.css
+++ b/03-trip/03-03-Next/src/components/Organisms/BoardsDetail/styles.module.css
@@ -43,7 +43,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100rem;
+    width: 100%;
     height: 40rem;
 }
 
