--- a/Next/nextproject/next-app/src/app/component/commons/layout/navigation/styles.module.css
+++ b/Next/nextproject/next-app/src/app/component/commons/layout/navigation/styles.module.css
@@ -50,3 +50,11 @@
   flex-direction: row;
   gap: 8px;
 }
+
+.css_loginbtn {
+  width: 93px;
+  height: 40px;
+  background-color: black;
+  color: white;
+  border-radius: 100px;
+}
