--- a/next_과제/src/app/globals.css
+++ b/next_과제/src/app/globals.css
@@ -38,6 +38,18 @@ html
   color: var(--variant-color);
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox  */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
