--- a/maincamp/my-app/src/app/boards/css/styles.module.css
+++ b/maincamp/my-app/src/app/boards/css/styles.module.css
@@ -1,74 +1,74 @@
 .paginationWrap{
     /* text-align:center; */
-    margin-top:2.4rem;
+    margin-top:24px;
     display:flex;
     justify-content:center;
-    gap:4rem;
+    gap:40px;
 }
 .listPrev, .listNext, .paginationNumber{
-    font-size:1.6rem;
+    font-size:16px;
     cursor:pointer;
 }
 
 .pagination button span{
-    font-size:2rem;
+    font-size:20px;
 }
 .pagination li a{
-    font-size:1rem;
+    font-size:10px;
 }
 
 .boardWrap{
-    width:128rem;
+    width:1280px;
     margin:0 auto;
-    font-size:62.5%;
-    border-radius:1.6rem;
-    padding:2.4rem 4.8rem 2.4rem 4.8rem;
-    box-shadow: 0 0 2rem 0 #00000014;
-    margin-top:2.4rem;
-    margin-bottom:2.4rem;
+    /* font-size:62.5%; */
+    border-radius:16px;
+    padding:24px 48px 24px 48px;
+    box-shadow: 0 0 20px 0 #00000014;
+    margin-top:24px;
+    margin-bottom:24px;
 }
 .listBg{
-    width:118.4rem;
+    width:1184px;
 }
 /* ul/li 공통 */
 .listForm .listTop,
 .listForm .listContent{
     display:flex;
     justify-content:center;
-    padding:1.2rem 2.4rem 1.2rem 2.4rem;
+    padding:12px 24px 12px 24px;
     border:1px solid #f2f2f2;
-    border-radius:0.8rem;
-    margin:0.8rem 0;
+    border-radius:8px;
+    margin:8px 0;
 }
 .listForm .listTop li:first-child,
 .listForm .listContent li:first-child{
-    width:6.4rem;
-    height:2rem;
+    width:64px;
+    height:20px;
 }
 .listForm .listTop li:nth-child(2),
 .listForm .listContent li:nth-child(2){
-    width:84.8rem;
-    height:2rem;
+    width:848px;
+    height:20px;
 }
 .listForm .listTop li:nth-child(3),
 .listForm .listContent li:nth-child(3){
-    width:10rem;
-    height:2rem;
+    width:100px;
+    height:20px;
 }
 .listForm .listTop li:last-child,
 .listForm .listContent li:last-child{    
-    width:10rem;
-    height:2rem;
+    width:100px;
+    height:20px;
 }
 
 .listForm .listTop{
-    width:118.4rem;
-    height:5.2rem;
+    width:1184px;
+    height:52px;
     font-weight:500;
 }
 
 .listForm li{
-    font-size:1.6rem;
+    font-size:16px;
 }
 
 /* 게시글 목록 */
@@ -79,17 +79,17 @@
     position:relative;
 }
 .listContent li{
-    font-size:1.4rem;
+    font-size:14px;
 }
 .listContent li:nth-child(2){cursor:pointer;}
 .listContent li button{
     display:none;
-    width:2.4rem;
-    height:2.4rem;
+    width:24px;
+    height:24px;
     background:url(../../../../public/images/delete.png) no-repeat;
     position:absolute;
     top:0;
-    left:8rem;
+    left:80px;
     cursor:pointer;
 }
 .listContent:hover button{
