--- a/maincamp/my-app/src/commons/layout/navigation/styles.module.css
+++ b/maincamp/my-app/src/commons/layout/navigation/styles.module.css
@@ -1,46 +1,46 @@
 .naviWrap{
-    width:192rem;
-    height:8rem;
+    width:1920px;
+    height:80px;
     margin:0 auto;
 }
 .naviBg{
-    width:128rem;
-    height:8rem;
+    width:1280px;
+    height:80px;
     margin:0 auto;
-    padding:2rem 0;
+    padding:20px 0;
     display:flex;
     align-items:center;
     justify-content:space-between;
 }
 .naviLeft{
-    width:36.4rem;
+    width:364px;
     display:flex;
     align-items:center;
-    gap:2.4rem;
+    gap:24px;
 }
 .naviLeft .logo{
-    width:5.6rem;
-    height:3.2rem;
+    width:56px;
+    height:32px;
     background:url(../../../../public/images/logo\ area.png) no-repeat;
 }
-.naviLeft div{font-size:1.6rem;}
+.naviLeft div{font-size:16px;}
 .naviLeft div:nth-child(2){
     font-weight:700;
     border-bottom:2px solid #000;
 }
 
 .naviRight{
-    width:6.8rem;
+    width:68px;
     display:flex;
     align-items:center;
 }
 .naviRight .profileIcon{
-    width:4rem;
-    height:4rem;
+    width:40px;
+    height:40px;
     background:url(../../../../public/images/navi_profile.png) no-repeat;
 }
 .naviRight .dropdown{
-    width:2.4rem;
-    height:2.4rem;
+    width:24px;
+    height:24px;
     background:url(../../../../public/images/down_arrow.png) no-repeat;
 }
