--- a/maincamp/my-app/src/components/boards-detail/comment-write/styles.module.css
+++ b/maincamp/my-app/src/components/boards-detail/comment-write/styles.module.css
@@ -1,14 +1,14 @@
 .comment_write_wrap{
-    width:128rem;
-    height:40rem;
+    width:1280px;
+    height:400px;
     margin:0 auto;
-    margin-top:6rem;
+    margin-top:60px;
     display:flex;
     flex-direction:column;
-    gap:2.4rem;
+    gap:24px;
 }
 .rateStar{
-    font-size:4rem;
+    font-size:40px;
 }
 
 /* 댓글 상단 이미지 */
@@ -16,23 +16,23 @@
     display:flex;
 }
 .comment_top .commentImg{
-    width:2.4rem;
-    height:2.4rem;
+    width:24px;
+    height:24px;
     background:url(../../../../public/images/comment.png) no-repeat;
 }
 .comment_top p{
-    font-size:1.6rem;
+    font-size:16px;
 }
 
 /* 댓글 등록 */
 .content_box{
-    width:128rem;
-    height:24rem;
+    width:1280px;
+    height:240px;
 }
 .content_box .writer p, .content_box .password p{
-    font-size:1.6rem;
+    font-size:16px;
     font-weight:500;
-    margin-bottom:1.6rem;
+    margin-bottom:16px;
 }
 .content_box .writer .d_flex,
 .content_box .password .d_flex{
@@ -41,12 +41,12 @@
 .content_box .writer span,
 .content_box .password span{
     color:#f66a6a;
-    font-size:1.6rem;
-    margin-left:0.8rem;
+    font-size:16px;
+    margin-left:8px;
 }
 
 .content_flex{
-    width:64rem;
+    width:640px;
     display:flex;
     justify-content:space-between;
 }
@@ -55,31 +55,31 @@
 .content_box .writer input, 
 .content_box .password input, 
 .content_box .comment_box textarea{
-    padding:1.2rem 1.6rem;
+    padding:12px 16px;
     border:1px solid #d4d3d3;
-    border-radius:0.8rem;
-    font-size:1.6rem;
+    border-radius:8px;
+    font-size:16px;
     color:#ababab;
 }
 .content_box .writer input, .content_box .password input{
-    width:31.2rem;
-    height:4.8rem;
+    width:312px;
+    height:48px;
 }
 .content_box .comment_box textarea{
-    width:128rem;
-    height:14.4rem;
-    margin-top:3.2rem;
+    width:1280px;
+    height:144px;
+    margin-top:32px;
 }
 
 .content_box button{
-    width:9.9rem;
-    height:4.8rem;
-    border-radius:0.8rem;
-    padding:1.2rem 1.6rem;
+    width:99px;
+    height:48px;
+    border-radius:8px;
+    padding:12px 16px;
     background-color:#c7c7c7;
     color:#e4e4e4;
-    font-size:1.8rem;
+    font-size:18px;
     float:right;
-    margin:1.6rem 0;
+    margin:16px 0;
     cursor:pointer;
 }
