--- a/maincamp/my-app/src/components/boards-list/pagination/styles.module.css
+++ b/maincamp/my-app/src/components/boards-list/pagination/styles.module.css
@@ -1,15 +1,15 @@
 .paginationWrap{
     /* text-align:center; */
-    margin-top:2.4rem;
+    margin-top:24px;
     display:flex;
     justify-content:center;
-    gap:4rem;
+    gap:40px;
 }
 .listPrev, .listNext, .paginationNumber{
-    font-size:1.6rem;
+    font-size:16px;
     cursor:pointer;
 }
 
 .pagination button span{
-    font-size:2rem;
+    font-size:20px;
 }
