style: add library for alert model; sweetalert

--- a/03-trip/03-03-Next/src/app/globals.css
+++ b/03-trip/03-03-Next/src/app/globals.css
@@ -61,3 +61,8 @@ button:hover {
 input:disabled {
     background-color: #bdbdbd;
 }
+
+body.swal2-shown > [aria-hidden="true"] {
+    transition: 0.1s filter;
+    filter: blur(3px);
+}
