--- a/trip-talk/src/app/_components/Button/styles.module.css
+++ b/trip-talk/src/app/_components/Button/styles.module.css
@@ -1,3 +1,3 @@
 .button {
-  @apply h-12 py-3 px-4 gap-2 rounded-lg text-lg font-semibold flex items-center border-solid border;
+  @apply h-12 py-3 px-4 gap-2 rounded-lg text-lg font-semibold flex items-center border-solid border justify-center;
 }
