--- a/Next/nextproject/next-app/src/app/product/register/style.module.css
+++ b/Next/nextproject/next-app/src/app/product/register/style.module.css
@@ -1,34 +1,95 @@
 .css_productlayout {
-  width: 100%;
-  height: 200px;
+  width: 1280px;
+  padding: 40px 0px 40px 0px;
   display: flex;
   flex-direction: column;
   justify-items: center;
   margin-bottom: 100px;
   margin-top: 100px;
+  gap: 14px;
 }
 
 .css_explain {
-  width: 500px;
-  height: 500px;
-  border: 1px solid black;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  gap: 40px;
 }
 
 .css_productname {
   width: 100%;
-  height: 20px;
+  height: 48px;
+  border: 1px solid gray;
+  border-radius: 8px;
 }
 
 .css_productexplain {
   width: 100%;
-  height: 20px;
+  height: 48px;
+  border: 1px solid gray;
+  border-radius: 8px;
 }
 
 .css_submitbtn {
   width: 100px;
   height: 50px;
   background-color: skyblue;
+}
+
+.css_address {
+  width: 100%;
+  height: 192px;
+  gap: 8px;
+  margin-top: 50px;
+}
+
+.css_addressnumtag {
+  width: 220px;
+  height: 24px;
+  gap: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.css_addressnum {
+  width: 220px;
+  height: 48px;
+  gap: 8px;
+  display: flex;
+}
+
+.css_addressnuminput {
+  width: 82px;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  padding: 12px 16px 12px 16px;
+}
+
+.css_search {
+  width: 130px;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  padding: 12px 16px 12px 16px;
+}
+
+.css_addressinput {
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  padding: 12px 16px 12px 16px;
+  margin-top: 10px;
+}
+
+.css_addressdetailinput {
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  padding: 12px 16px 12px 16px;
+  margin-top: 10px;
 }
