--- a/02-main_camp/Day38/src/app/_components/mypage/list/styles.module.css
+++ b/02-main_camp/Day38/src/app/_components/mypage/list/styles.module.css
@@ -17,6 +17,7 @@
   color: #1c1c1c;
   font-weight: 500;
   font-size: 1rem;
+  text-align: center;
 }
 
 .columnsTitle_main {
@@ -30,6 +31,8 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+
+  cursor: pointer;
 }
 
 .itemContainer {
@@ -43,8 +46,35 @@
 
 .item {
   width: 6.25rem;
+  text-align: center;
+
+  color: #1c1c1c;
+  font-weight: 500;
+  font-size: 0.875rem;
 }
 
-.item_main {
+.item__main {
   flex-grow: 1;
+
+  color: #1c1c1c;
+  font-weight: 500;
+  font-size: 0.875rem;
+}
+
+.positive {
+  color: #2974e5;
+}
+
+.negative {
+  color: #f66a6a;
+}
+
+.item__secondary {
+  color: #919191;
+  font-weight: 400;
+  font-size: 0.875rem;
+}
+
+.text__center {
+  text-align: center;
 }
