--- a/my-app/src/commons/layout/navigation/styles.module.css
+++ b/my-app/src/commons/layout/navigation/styles.module.css
@@ -51,3 +51,19 @@
   width: 24px;
   height: 24px;
 }
+
+.loginBtnSection {
+  display: flex;
+  height: 40px;
+  padding: 8px 12px;
+  align-items: center;
+
+  border-radius: 100px;
+  background: var(--gray-B, #000);
+
+  color: #fff;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px; /* 142.857% */
+}
