댓글 수정 기능 완료함

--- a/src/components/boards-list/list/styles.module.css
+++ b/src/components/boards-list/list/styles.module.css
@@ -87,6 +87,11 @@
     border: 1px solid #3a1a1a;
 }
 
+.boardListBox:hover {
+    background-color: orange;
+    border: none;
+}
+
 .boardListBoxNumber {
     padding: 0 0 0 24px;
     color: #919191;
