--- a/src/components/boards-detail/comments-write/styles.module.css
+++ b/src/components/boards-detail/comments-write/styles.module.css
@@ -75,6 +75,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    gap: 10px;
 }
 
 .regiCommentButton {
@@ -82,4 +83,12 @@
     height: 48px;
     background-color: #c7c7c7;
     border-radius: 8px;
+}
+
+.cancleButton {
+    width: 64px;
+    height: 48px;
+
+    border-radius: 8px;
+    border: 1px solid #c7c7c7;
 }
