--- a/02-main_camp/Day39/src/app/_components/commons/input/styles.module.css
+++ b/02-main_camp/Day39/src/app/_components/commons/input/styles.module.css
@@ -1,4 +1,5 @@
 .input {
+  width: 100%;
   border-radius: 0.5rem;
   border: 0.0625rem solid #d4d3d3;
   padding: 0.75rem 1rem;
@@ -27,5 +28,10 @@
 .form__container {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
+}
+
+.form__Input__container {
+  display: flex;
   gap: 0.5rem;
 }
