--- a/FocusOn/src/components/login/styles.module.css
+++ b/FocusOn/src/components/login/styles.module.css
@@ -41,7 +41,7 @@
 
 .login_button {
   width: 100%;
-  background-color: #e78b8d;
+  background-color: var(--main-color);
   color: white;
   border: none;
   padding: 10px 20px;
@@ -51,7 +51,7 @@
 }
 
 .login_button:hover {
-  background-color: #ffa7a5;
+  background-color: var(--main-color-hover);
 }
 
 .signup_box {
@@ -62,8 +62,10 @@
 
 .question {
   font-size: 14px;
+  color: var(--gray);
 }
 
 .signup_button {
   font-size: 14px;
+  color: var(--main-color);
 }
