--- a/FocusOn/src/components/signup/styles.module.css
+++ b/FocusOn/src/components/signup/styles.module.css
@@ -46,21 +46,6 @@
   justify-content: center;
 }
 
-.signup_button {
-  width: 100%;
-  background-color: var(--main-color);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.signup_button:hover {
-  background-color: var(--main-color-hover);
-}
-
 .login_button_box {
   display: flex;
   justify-content: space-between;
@@ -75,4 +60,8 @@
 .login_button {
   color: var(--main-color);
   font-size: 14px;
+}
+
+.error {
+  color: red;
 }
