[241104] design: - 관리자인 경우 답변하기 아이콘 및 레이블 띄우기 - 답변하기 클릭 시 문의 작성할 수 있도록 구현 - 아이콘 이미지 사이즈 변경

--- a/02-main_camp/Day39/src/commons/ui/comment/comment/styles.module.css
+++ b/02-main_camp/Day39/src/commons/ui/comment/comment/styles.module.css
@@ -1,6 +1,12 @@
 .comment__container {
   display: flex;
   flex-direction: column;
+  gap: 0.75rem;
+}
+
+.user__container {
+  display: flex;
+  flex-direction: column;
   gap: 0.5rem;
 }
 
@@ -33,5 +39,17 @@
 .date__container {
   color: #818181;
   font-weight: 400;
+  font-size: 0.875rem;
+}
+
+.reply__container {
+  display: flex;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+
+.reply__label {
+  color: #333333;
+  font-weight: 300;
   font-size: 0.875rem;
 }
