--- a/02-main_camp/Day39/src/commons/ui/comment/writing/styles.module.css
+++ b/02-main_camp/Day39/src/commons/ui/comment/writing/styles.module.css
@@ -22,6 +22,11 @@
   gap: 1rem;
 }
 
+.buttons__container {
+  display: flex;
+  gap: 1rem;
+}
+
 .button {
   height: 3rem;
   padding: 0.75rem 1rem;
@@ -30,6 +35,20 @@
 
   background-color: black;
   color: white;
+  font-weight: 500;
+  font-size: 1.125rem;
+  text-align: center;
+}
+
+.button__cancel {
+  height: 3rem;
+  padding: 0.75rem 1rem;
+
+  border-radius: 0.5rem;
+  border: 0.0625rem solid black;
+
+  background-color: white;
+  color: black;
   font-weight: 500;
   font-size: 1.125rem;
   text-align: center;
