--- a/homework/my-app/src/app/store/style.module.css
+++ b/homework/my-app/src/app/store/style.module.css
@@ -1,23 +1,57 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 20px;
-  padding: 40px;
+  padding-top: 5rem;
+  padding-left: 6vw;
+  padding-right: 6vw;
 }
 
 .card {
-  background-color: #f5f5f5;
-  border-radius: 8px;
-  padding: 16px;
+  background-color: #eaeaea;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
 }
 
 .image {
   width: 100%;
-  height: 200px;
-  object-fit: contain;
+  height: 300px;
+  object-fit: cover;
   margin-bottom: 12px;
+  transition: transform 0.3s;
+}
+
+.card:hover .image {
+  transform: scale(1.05);
+}
+
+/* 북마크 아이콘 오버레이 */
+.overlay {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 0.3s;
+  z-index: 1; /* 우선순위 설정 */
+}
+
+.card:hover .overlay {
+  opacity: 1;
+}
+
+.bookmarkIcon {
+  width: 18px;
+  height: 18px;
 }
 
 .productName {
@@ -29,4 +63,37 @@
 .price {
   font-size: 14px;
   color: #555;
+}
+
+.tags {
+  position: absolute;
+  left: 10px;
+  bottom: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  font-size: 14px;
+}
+
+.tag {
+  background-color: #000000;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 20px;
+}
+
+.namePriceContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.profileIcon {
+  width: 25px;
+  height: 25px;
+}
+
+.profileContainer {
+  gap: 10px;
+  display: flex;
+  justify-content: flex-end;
 }
