기본 셋팅 스타일 위치 수정

--- a/next_과제/src/app/globals.css
+++ b/next_과제/src/app/globals.css
@@ -14,6 +14,7 @@
     --border-color: #f0f0f0;
     --text-color: #030303;
     --variant-color: #000;
+    --primary-color: #1890ff;
   }
   html.dark {
     --border-color: #303030;
@@ -21,33 +22,6 @@
     --variant-color: #fff;
     color: var(--text-color);
   }
-}
-
-html.dark
-  .ant-btn-color-default.ant-btn-variant-solid:not(:disabled):not(
-    .ant-btn-disabled
-  ):hover {
-  color: #000;
-  background: rgba(255, 255, 255, 0.85);
-}
-
-html
-  #bodyRoot
-  .ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover {
-  border-color: var(--variant-color);
-  color: var(--variant-color);
-}
-
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox  */
-input[type="number"] {
-  -moz-appearance: textfield;
 }
 
 @layer utilities {
@@ -84,6 +58,33 @@ input[type="number"] {
   }
 }
 
+html.dark
+  .ant-btn-color-default.ant-btn-variant-solid:not(:disabled):not(
+    .ant-btn-disabled
+  ):hover {
+  color: #000;
+  background: rgba(255, 255, 255, 0.85);
+}
+
+html
+  #bodyRoot
+  .ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover {
+  border-color: var(--variant-color);
+  color: var(--variant-color);
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox  */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .dark body {
   background-color: #141414;
 }
@@ -104,24 +105,6 @@ body {
   height: 1px;
   margin: -1px;
 }
-/* 
-.textOverflow_line1 {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  line-clamp: 1;
-  box-orient: vertical;
-}
-
-.textOverflow_line2 {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  line-clamp: 2;
-  box-orient: vertical;
-} */
 
 .quill > * {
   border-color: inherit !important;
