--- a/maincamp/my-app/src/components/boards-detail/comment-write/styles.module.css
+++ b/maincamp/my-app/src/components/boards-detail/comment-write/styles.module.css
@@ -1,8 +1,7 @@
 .comment_write_wrap{
     width:1280px;
     height:400px;
-    margin:0 auto;
-    margin-top:60px;
+    margin:60px auto;
     display:flex;
     flex-direction:column;
     gap:24px;
