--- a/homework/my-app/src/app/store/[boardId]/style.module.css
+++ b/homework/my-app/src/app/store/[boardId]/style.module.css
@@ -185,3 +185,35 @@
   font-size: 20px;
   color: #2c398e;
 }
+.bookmarkIcon {
+  width: 18px;
+  height: 18px;
+}
+/* 북마크 아이콘 오버레이 */
+.overlay {
+  display: flex;
+  padding: 4px 8px 4px 4px;
+  align-items: center;
+  border-radius: 8px;
+  background: rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+  height: 32px;
+  color: var(--gray-w, #fff);
+  text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+
+  /* me_14_20 */
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 142.857% */
+}
+.bookmarkIcon {
+  width: 18px;
+  height: 18px;
+}
+.nameBookmarkContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
